# dummy-webserver

./: Dockerfile  LICENSE  Makefile  README.md  requirements-dev.txt  setup.cfg  setup.py
charts/: dummyserver.template.yaml
charts/dummyserver/: Chart.yaml  values.yaml
charts/dummyserver-stage-config/: dummyserver-stage-config.yaml
charts/dummyserver/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/dummyserver/templates/tests/: test-connection.yaml
dummyserver/: __main__.py  handler.py  server.py
script/: entrypoint
src/: entrypoint  server
test/: test_handler.py
test/test_handler/: README.md  client.crt  client.csr  client.key  client.req  rootCA.crt  rootCA.key  rootCA.srl  server-bundle.crt  server.crt  server.csr  server.key  server.req
tests/: test_handler.py  test_server.py
