[metadata]
name = dummyserver
version = 0.5.0
summary = Dummy Web Server
description-file =
    README.md
author = Eurotech
author-email = no-reply@eurotech.com
classifier =
    Development Status :: 4 - Beta
    Topic :: Utilities
    Topic :: Communications :: Chat
    License :: OSI Approved :: Apache Software License
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3

[files]
packages =
    dummyserver

[entry_points]
console_scripts =
    dummyserver = dummyserver.__main__:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
